--- a/pom.xml
+++ b/pom.xml
@@ -34,23 +34,31 @@
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
 		<dependency>
 		    <groupId>org.projectlombok</groupId>
 		    <artifactId>lombok</artifactId>
 		    <version>1.18.4</version>
 		    <scope>provided</scope>
 		</dependency>
+		
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		
+		<dependency>
+    		<groupId>commons-io</groupId>
+   			 <artifactId>commons-io</artifactId>
+    		<version>2.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
