--- a/usuario/src/main/resources/application.properties
+++ b/usuario/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+#configuraçoes mysql
+#spring.datasource.url = jdbc:mysql://localhost:3306/usuario?useSSL=false
+#spring.datasource.username = root
+#spring.datasource.password =  marlo123
 
+## Hibernate Properties
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto = update
+
+## server port
+server.port=8084
+
+#configuration postgree
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.datasource.url= jdbc:postgresql://localhost:5432/usuario
+spring.datasource.username=postgres
+spring.datasource.password=banco123
+spring.jpa.hibernate.ddl-auto=update
