--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ mvnw
 .mvn/wrapper/MavenWrapperDownloader.java
 .mvn/wrapper/maven-wrapper.properties
 src/main/resources/application-dev.properties
+usuario/src/main/resources/application-dev.properties
